# prod-ab-pratform

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  DB_SCHEMA.md  DECISION_API_FINAL.md  DECISION_API_REVIEW.md  Dockerfile  Dockerfile.celery  IDEMPOTENCY_FIX.md  README.md  docker-compose.yml  entrypoint.sh  prometheus.yml  pyproject.toml  task.md  test_api.sh  test_events.py  test_idempotency_demo.py  users.txt
.cursor/commands/: p.md
docs/: compliance_matrix_ru.md  demo_scenarios_ru.md  grafana_experiment_insights_dashboard.json  observability.md  observability_ru.md  runbook.md  runbook_observability.md  runbook_ru.md
docs/architecture/: c4_component_api.md  c4_container.md  c4_context.md  decisions_ru.md  limitations_ru.md  notifications.md  repo_map_ru.md
migrations/models/: 0_20260215014901_init.py  0_20260216175840_init.py  0_20260219202433_init.py  1_20260215172449_update.py  1_20260218002214_update.py  1_20260220185645_update.py  2_20260218_metrics.py  2_20260220_remove_requires_exposure_from_metrics.py  2_20260221183850_update.py  3_20260219_guardrails.py  3_20260222005201_None.py  4_20260222144701_update.py  5_20260223173249_update.py
scripts/: check_insights_metrics.py  check_notifications.py  generate_db_schema.py  smoke_decide_events_report.py
src/: main.py
src/application/dto/: auth.py  decide.py  event_type.py  events.py  experiment.py  feature_flag.py  learnings.py  metric.py  notifications.py  reports.py  user.py
src/application/ports/: decisions_repository.py  domain_events.py  event_id_generator.py  event_types_repository.py  event_validator.py  events_repository.py  experiment_versions_repository.py  experiments_repository.py  feature_flags_repository.py  guardrail_configs_repository.py  guardrail_triggers_repository.py  jwt.py  learnings_repository.py  metric_aggregator.py  metrics_repository.py  notification_channel.py  notification_channel_configs_repository.py  notification_deliveries_repository.py  notification_events_repository.py  notification_rate_limiter.py  notification_rules_repository.py  notification_task_enqueuer.py  password_hasher.py  pending_events_store.py  uow.py  users_repository.py
src/application/services/: domain_event_publisher.py  notification_dispatcher.py  notification_event_processor.py  notification_message_formatter.py
src/application/usecases/: __init__.py  decide.py
src/domain/: __init__.py
src/domain/aggregates/: __init__.py  decision.py  event.py  event_type.py  experiment.py  feature_flag.py  learning.py  metric.py  user.py
src/domain/entities/: guardrail_config.py  notification_channel_config.py  notification_delivery.py  notification_rule.py  variant.py
src/domain/events/: __init__.py  experiment.py
src/domain/exceptions/: __init__.py  auth.py  base.py  decision.py  events.py  experiment.py  feature_flags.py  learnings.py  metrics.py  notifications.py  users.py
src/domain/ports/: __init__.py  decide.py
src/infra/: aerch_config.py  bootstrap.py
tests/e2e/: conftest.py  helpers.py  mock_webhook_server.py  test_auth.py  test_decide.py  test_decide_event_report.py  test_events.py  test_experiment_versions.py  test_experiments_lifecycle.py  test_feature_flags.py  test_metrics.py  test_notifications.py  test_notifications_integration.py  test_reports.py  test_variant_upsert.py
tests/fakes/: __init__.py  domain_event_publisher.py  experiments_repository.py  guardrail_configs.py  guardrail_triggers.py  metric_aggregator.py  metrics_repository.py  notification_channel_configs_repository.py  notification_deliveries_repository.py  notification_events_repository.py  notification_rate_limiter.py  notification_rules_repository.py  notification_task_enqueuer.py  uow.py
(+159 files in other folders)
