[project]
name = "backend-student-ksenia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.129.0",
    "granian>=2.7.1",
    "jamlib>=2.5.5",
    "punq>=0.7.0",
    "tortoise-orm[asyncpg]>=1.1.1",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.15.0",
]

[tool.ruff]
line-length = 80
target-version = "py313"
exclude = ["*__init__.py", "migrations"]

[tool.ruff.lint]
extend-select = ["UP", "D"]
fixable = ["ALL"]
ignore = [
    "UP009",
    "D"
]

[tool.ruff.format]
skip-magic-trailing-comma = false
docstring-code-format = false
docstring-code-line-length = 80

[tool.ruff.lint.isort]
case-sensitive = true
constants = ["__future__"]
detect-same-package = true
known-first-party = ["src"]
lines-after-imports = 2
lines-between-types = 1
order-by-type = true

[tool.mypy]
python_version = 3.13
ignore_missing_imports = true
disable_error_code = ["import-untyped"]
